--- a/config/default.yaml
+++ b/config/default.yaml
@@ -33,7 +33,7 @@ axis-bank:
     credit: "420221.27"
     date: ""
     total_balance: ""
-    account_number: ""
+    account_number: "912010052152945"
 
 hdfc-bank(1): 
     account_holder_name: "SANDEEP PRAMANIK"
