--- a/config/default.yaml
+++ b/config/default.yaml
@@ -147,7 +147,6 @@ PNB-Bank-ok:
     date: ""
     total_balance: "19,62,11,399.87 Cr"
     account_number: "2257000100014002"
-    
 Regions-Bank-Statement: 
     account_holder_name: ""
     address: ""
@@ -163,19 +162,20 @@ Regions-Bank-Statement:
     total_balance: ""
     account_number: ""
 sbh-bank: 
-    account_holder_name: ""
+    account_holder_name: "Mr. DUDIGAM ANJANAILU"
     address: ""
-    ifsc_code: ""
-    micr_code: ""
-    branch_name: ""
+    ifsc_code: "SBHY0020076"
+    micr_code: "500004054"
+    branch_name: "SANATHNAGAR HYDERABAD"
     account_type: ""
-    opening_balance: ""
-    closing_balance: ""
+    opening_balance: "12,599.85"
+    closing_balance: "4,751.85"
     debit: ""
     credit: ""
     date: ""
     total_balance: ""
-    account_number: ""
+    account_number: "00000052208489170"
+
 sbi-bank: 
     account_holder_name: ""
     address: ""
