--- a/config/input.yaml
+++ b/config/input.yaml
@@ -1,6 +1,6 @@
 # Default Values
 # Defines number of rows to be generated in the CSV File
-number_of_rows: 3
+number_of_rows: 5
 file_name: MRMC
 available_field: [account_holder_name, address, ifsc_code, micr_code, branch_name,
   account_type, account_number, opening_balance, closing_balance, debit, credit, date,
@@ -23,17 +23,24 @@ default:
 account_holder_name:
       # Account holder names in small letters
   small_names: 1
-  capital_names: 3
+  capital_names: 1
   short_names: 1
   long_names: 1
   no_gap_names: 1
   dot_names: 1
-  no_title_names: 2
+  no_title_names: 1
 address:
       # Can Contain "single" or "double" or "three" or "four", Only valid on Default Locale
       # Default and only value for India is "single"
   address_line: single
   wrong_state: false
   pincode_length: 5
-  has_pincode: true
-  no_gap_address: false
+  has_pincode: false
+  no_gap_address: true
+account_number:
+      # Use Default Normal Faker Generation , if False other settings combination will be used
+  normal: [false, 1]
+  account_number_length: [7, 1]
+  has_alphabet: [false, 1]
+  has_special_characters: [false, 1]
+  blank: [false, 1]
