--- a/config/input.yaml
+++ b/config/input.yaml
@@ -1,6 +1,6 @@
 # Default Values
 # Defines number of rows to be generated in the CSV File
-number_of_rows: 1
+number_of_rows: 5
 file_name: MRMC
 available_field: [account_holder_name, address, ifsc_code, micr_code, branch_name,
   account_type, account_number, opening_balance, closing_balance, debit, credit, date,
@@ -40,7 +40,7 @@ address:
 account_number:
       # Use Default Normal Faker Generation , if False other settings combination will be used
   normal: [false, 0]
-  account_number_length: [7, 0]
-  has_alphabet: [false, 0]
-  has_special_characters: [false, 0]
+  account_number_length: [10, 0]
+  has_alphabet: [true, 1]
+  has_special_characters: [false, 1]
   blank: [true, 1]
