--- a/config/default.yaml
+++ b/config/default.yaml
@@ -116,12 +116,12 @@ MRMC:
     address: |
         587 Welsh Road
         Canberra, ACT 2600
-    ifsc_code: ""
-    micr_code: ""
+    ifsc_code: "test ifsc_code"
+    micr_code: "test micr_code"
     branch_name: "Canberra"
-    account_type: ""
-    opening_balance: ""
-    closing_balance: ""
+    account_type: "test account_type"
+    opening_balance: "test opening_balance"
+    closing_balance: "test closing_balance"
     debit: "$40,899"
     credit: "$45,244"
     date: ""
@@ -163,19 +163,19 @@ Regions-Bank-Statement:
     total_balance: ""
     account_number: ""
 sbh-bank: 
-    account_holder_name: ""
+    account_holder_name: "Mr. DUDIGAM ANJANAILU"
     address: ""
-    ifsc_code: ""
-    micr_code: ""
-    branch_name: ""
+    ifsc_code: "SBHY0020076"
+    micr_code: "500004054"
+    branch_name: "SANATHGARH HYDRABAD"
     account_type: ""
-    opening_balance: ""
-    closing_balance: ""
+    opening_balance: "12,599.85"
+    closing_balance: "4,751.85"
     debit: ""
     credit: ""
     date: ""
     total_balance: ""
-    account_number: ""
+    account_number: "00000052208489170"
 sbi-bank: 
     account_holder_name: ""
     address: ""
