--- a/config/base.yaml
+++ b/config/base.yaml
@@ -2,6 +2,7 @@
 # Defines number of rows to be generated in the CSV File
 number_of_rows: 3
 file_name: "MRMC"
+action: "random"
 available_field: [account_holder_name,address,ifsc_code,micr_code,branch_name,account_type,account_number,opening_balance,closing_balance,debit,credit,date,total_balance]
 target_field: [ifsc_code]
 default: 
