Annotation function working 1 page

--- a/config/base.yaml
+++ b/config/base.yaml
@@ -5,6 +5,8 @@ file_name: "MRMC"
 action: "random"
 available_field: [account_holder_name,address,ifsc_code,micr_code,branch_name,account_type,account_number,opening_balance,closing_balance,debit,credit,date,total_balance]
 target_field: [ifsc_code]
+available_label: ['Account Name', 'Account Number', 'Account Type', 'Address', 'Branch Name', 'Closing Balance', 'Credit', 'Debit', 'IFSC Code', 'MICR Code', 'Opening Balance', 'Date', 'Total Balance']
+target_label: ['Account Name', 'Account Number', 'Account Type', 'Address', 'Branch Name', 'Closing Balance', 'Credit', 'Debit', 'IFSC Code', 'MICR Code', 'Opening Balance', 'Date', 'Total Balance']
 default: 
     account_holder_name: ""
     address: ""
