--- a/config/input.yaml
+++ b/config/input.yaml
@@ -1,12 +1,17 @@
 # Default Values
 # Defines number of rows to be generated in the CSV File
-number_of_rows: 3
+number_of_rows: 1
 file_name: axis-bank
 action: random
 available_field: [account_holder_name, address, ifsc_code, micr_code, branch_name,
   account_type, account_number, opening_balance, closing_balance, debit, credit, date,
   total_balance]
 target_field: [account_holder_name, address, ifsc_code, micr_code, branch_name, account_type,
+  account_number, opening_balance, closing_balance, debit, credit, date, total_balance]
+available_label: [Account Name, Account Number, Account Type, Address, Branch Name,
+  Closing Balance, Credit, Debit, IFSC Code, MICR Code, Opening Balance, Date, Total
+    Balance]
+target_label: [account_holder_name, address, ifsc_code, micr_code, branch_name, account_type,
   account_number, opening_balance, closing_balance, debit, credit, date, total_balance]
 default:
   account_holder_name: THANIGAIVEL BHEEMARAJ S
