--- a/config/input.yaml
+++ b/config/input.yaml
@@ -1,10 +1,10 @@
 # Default Values
 # Defines number of rows to be generated in the CSV File
-number_of_rows: 10
-file_name: ubi
-action: random
+number_of_rows: 3
+file_name: MRMC
+action: ranadd
 mark_annotations: true
-automate_table: false
+automate_table: true
 available_field: [account_holder_name, address, ifsc_code, micr_code, branch_name,
   account_type, account_number, opening_balance, closing_balance, debit, credit, date,
   total_balance]
@@ -16,22 +16,27 @@ available_label: [Account Name, Account Number, Account Type, Address, Branch Na
 target_label: [account_holder_name, address, ifsc_code, micr_code, branch_name, account_type,
   account_number, opening_balance, closing_balance, debit, credit, date, total_balance]
 default:
-  account_holder_name: INDIRA SAPARE
-  address: "PLOT NO 23 RENUKA HOUSING SOCIETY\nCity - NAGPUR\nState- MAHARASHTRA\t\
-    Country- IN\t\n"
-  ifsc_code: ''
-  micr_code: ''
-  branch_name: ''
-  account_type: SALARY
-  account_number: '49802030032344'
-  opening_balance: '345.08'
-  closing_balance: 40,632.87
-  debit: '420366.35'
-  credit: '420221.27'
-  date: 27/06/2017
-  total_balance: ''
+  account_holder_name: Orlando Taylor
+  address: "587 Welsh Road\nCanberra, ACT 2600\n"
+  ifsc_code: test ifsc_code
+  micr_code: test micr_code
+  branch_name: Canberra
+  account_type: test account_type
+  account_number: '95715155'
+  opening_balance: test opening_balance
+  closing_balance: test closing_balance
+  debit: $40,899
+  credit: $45,244
+  date: ''
+  total_balance: $53,775 CR
   PinCode: '440036'
   branch_code: '34980'
+  pincode: 121102
+  closing_balance_date: 21/02/2020
+  last_debit_ammount: 3,200.00
+  last_debit_date: 21/02/2020
+  last_credit_ammount: 3,000.00
+  last_credit_date: 22/02/2020
 account_holder_name:
       # Account holder names in small letters
   small_names: 5
